# RoboticsProject

./: CMakeLists.txt  README.md  package.xml
costmaps/: cost_params.yaml  global_params.yaml  local_params.yaml
launchers/: firerobot.launch  navigation.launch
scripts/: fire_node.py  firegenerator_node.py  node.py  robotcontrol_node.py  safe_path_counter.py  thermal_captor.py  util.py
src/: util.py
